--- a/admin/css/vendor.css
+++ b/admin/css/vendor.css
@@ -1367,7 +1367,7 @@ body[data-aos-easing=ease-in-out-quart] [data-aos] {
 .owl-carousel .owl-video-wrapper {
   position: relative;
   height: 100%;
-  background: #000;
+  background: #E6DBDB;
 }
 
 .owl-carousel .owl-video-play-icon {
