--- a/admin/css/main.css
+++ b/admin/css/main.css
@@ -563,30 +563,7 @@ fieldset {
   border: none;
 }
 
-input[type="email"],
-input[type="number"],
-input[type="search"],
-input[type="text"],
-input[type="tel"],
-input[type="url"],
-input[type="password"],
-textarea,
-select {
-  display: block;
-  height: 6rem;
-  padding: 1.5rem 2rem;
-  border: 0;
-  outline: none;
-  color: #333333;
-  font-family: "muli-regular", sans-serif;
-  font-size: 1.5rem;
-  line-height: 3rem;
-  max-width: 100%;
-  background: rgba(0, 0, 0, 0.1);
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  border-radius: 5px;
-}
+
 
 .ss-custom-select {
   position: relative;
@@ -1095,7 +1072,7 @@ h1.intro-header::before {
 }
 
 .narrow {
-  max-width: 800px;
+ width: 100% !important;
 }
 
 
@@ -1124,7 +1101,7 @@ h1.intro-header::before {
  * ------------------------------------------------------------------- */
 
 #header {
-  width: 100%;
+  width: 100% !important;
   height: 72px;
   background-color: #111111;
   position: fixed;
@@ -1952,6 +1929,12 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
   vertical-align: bottom;
 }
 
+.container{
+  background-color: transparent !important;
+}
+
+
+
 
 /* ------------------------------------------------------------------- 
  * responsive:
@@ -2069,8 +2052,15 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
   }
 }
 
+.row{
+  background-color: transparent !important;
+}
 
 
+.form-control{
+  padding: 0% !important;
+  margin: 0% !important;
+}
 /* ===================================================================
  *  12. pricing - (_layout.scss)
  *
@@ -2502,7 +2492,7 @@ html[data-useragent*='MSIE 10.0'] .home-scrolldown,
 }
 
 #download .row {
-  max-width: 800px;
+  width: 100% !important;
 }
 
 #download .download-badges {
@@ -2651,42 +2641,6 @@ footer ul a:visited {
   position: relative;
 }
 
-.footer-subscribe #mc-form {
-  width: 100%;
-}
-
-.footer-subscribe #mc-form input[type="email"] {
-  width: 100%;
-  height: 5.4rem;
-  padding: 1.2rem 100px 1.2rem 60px;
-  background: url(../images/email-icon.png) 20px center no-repeat, rgba(0, 0, 0, 0.1);
-  background-size: 24px 16px, auto;
-  margin-bottom: 1.8rem;
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.footer-subscribe #mc-form input[type="email"]:focus {
-  color: #ffffff;
-}
-
-.footer-subscribe #mc-form input[type=submit] {
-  position: absolute;
-  top: 0;
-  right: 0;
-  color: #ffffff;
-  background: #39b54a;
-  border-color: #39b54a;
-  border-radius: 0 .5rem .5rem 0;
-  padding: 0 15px;
-}
-
-.footer-subscribe #mc-form label {
-  color: #ffffff;
-  font-family: "montserrat-regular", sans-serif;
-  font-size: 1.3rem;
-  padding: 0 2rem;
-}
-
 .footer-subscribe #mc-form label i {
   padding-right: 6px;
 }
@@ -2818,7 +2772,7 @@ footer ul a:visited {
 
 @media only screen and (max-width: 600px) {
   .footer-main .row {
-    max-width: 480px;
+    width: 100%!important;
   }
   .footer-main h4 {
     padding-bottom: 0;
